--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/personal-trainer-writing2400.jpg.jpg">
+                        <a class="portfolio-box" href="assets/img/personal-trainer-writing2400.jpg">
                             <img class="img-fluid" src="assets/img/personal-trainer-writing2400.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
