adds replacement text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">It never gets easier. You just get strong.</h2>
+                    <h2 class="text-white mt-0">Let us design and customize your party, so you can relax and enjoy.</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4"></p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
@@ -82,36 +82,36 @@
     <!-- Services-->
     <section class="page-section" id="services">
         <div class="container">
-            <h2 class="text-center mt-0">Let us help you achieve your goals.</h2>
+            <h2 class="text-center mt-0">We grill, you chill.</h2>
             <hr class="divider my-4" />
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-dumbbell text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Customized Programs</h3>
-                        <p class="text-muted mb-0">Life is busy, take the stress out of putting together a plan. Whether at home, or in the gym we have programs to get you to that end result.</p>
+                        <h3 class="h4 mb-2">Let's Do Brunch!</h3>
+                        <p class="text-muted mb-0">From a traditional style backyard barbeque party, to a Hawaiian Luau , or Polynesian style tiki party ..We bring the island to you , so let's Limbo!! With stylish decor and theme, delicious food and upbeat music , we have something for everyone..How about an Italian feast or Mexican style  Fiesta in your own backyard? The possibilities are endless.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-utensils text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Personalized Meal Plan</h3>
+                        <h3 class="h4 mb-2">Unique themed parties for any occasion.</h3>
                         <p class="text-muted mb-0">Custom tailored to help you achieve your ideal body. Developed according to your individual needs and lifestyle.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-laptop text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Virtual Workouts</h3>
-                        <p class="text-muted mb-0">A myriad of different online programs and routines custom built to align with your desired results. The choices are endless.</p>
+                        <h3 class="h4 mb-2">Bring the vineyard right to your backyard</h3>
+                        <p class="text-muted mb-0">Let our server fill your flutes, as you indulge in our custom charcuterie boards, or tasty tappas and pizzas...Why travel when you can do a wine tasting in the comfort of your own home? The options are endless.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Always by your side.</h3>
-                        <p class="text-muted mb-0">Daily check-ins</p>
-                        <p class="text-muted mb-0">Accountability  coaching to help you stay on track throughout your fitness journey</p>
+                        <h3 class="h4 mb-2">Backyard movie night and youth parties.</h3>
+                        <p class="text-muted mb-0">Bringing the theater experience straight to your doorstep complete with fresh popcorn and drinks, our setup is sure to woo any crowd.</p>
+                        <p class="text-muted mb-0">Youth and teen parties tailored to suit any occasion from graduations to sweet sixteens, and traditional birthdays..</p>
                         <p class="text-muted mb-0">One on one guidance and support.</p>
                     </div>
                 </div>
@@ -182,7 +182,9 @@
     <!-- Call to action-->
     <section class="page-section bg-dark text-white">
         <div class="container text-center">
-            <h2 class="mb-4">Free Consultation Limited time!</h2>
+            <h2 class="mb-4">Party plans and packages to fit every budget.</h2>
+            <hr class="divider my-4" />
+            <p class="text-muted mb-5" class="mb-4">Table, chairs, and tent rentals available.</p>
             <a class="btn btn-light btn-xl" href="#phone-number">Contact Now!</a>
         </div>
     </section>
