--- a/index.html
+++ b/index.html
@@ -193,9 +193,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="mt-0">Let's Get In Touch!</h2>
+                    <h2 class="mt-0">Call for pricing and menu options.</h2>
                     <hr class="divider my-4" />
-                    <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p class="text-muted mb-5">
+                        We custom tailor each party from decor to menu options according to your event... Specializing in BBQ, Tapas , custom Pizzas and extensive Brunch offerings.
+                    </p>
                 </div>
             </div>
             <div class="row">
