Fixes text with icons

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-dumbbell text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Let's Do Brunch!</h3>
-                        <p class="text-muted mb-0">From a traditional style backyard barbeque party, to a Hawaiian Luau , or Polynesian style tiki party ..We bring the island to you , so let's Limbo!! With stylish decor and theme, delicious food and upbeat music , we have something for everyone..How about an Italian feast or Mexican style  Fiesta in your own backyard? The possibilities are endless.</p>
+                        <p class="text-muted mb-0">Whether it's a Boho for the Bride or Bachelorette, a get together with the girls, or just an intimate gathering.We will put together a breathtaking brunch, with alluring decor and mouth watering offerings...So let the Prosecco and Mimosas grace your glasses, as you sit back and enjoy a most memorable experience.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-utensils text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Unique themed parties for any occasion.</h3>
-                        <p class="text-muted mb-0">Custom tailored to help you achieve your ideal body. Developed according to your individual needs and lifestyle.</p>
+                        <p class="text-muted mb-0">From a traditional style Backyard Barbeque Party, to a Hawaiian Luau , or Polynesian style tiki party ..We bring the island to you , so let's Limbo!! With stylish decor and theme, delicious food and upbeat music , we have something for everyone..How about an Italian feast or Mexican style  Fiesta in your own backyard? The possibilities are endless.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -112,7 +112,7 @@
                         <h3 class="h4 mb-2">Backyard movie night and youth parties.</h3>
                         <p class="text-muted mb-0">Bringing the theater experience straight to your doorstep complete with fresh popcorn and drinks, our setup is sure to woo any crowd.</p>
                         <p class="text-muted mb-0">Youth and teen parties tailored to suit any occasion from graduations to sweet sixteens, and traditional birthdays..</p>
-                        <p class="text-muted mb-0">One on one guidance and support.</p>
+
                     </div>
                 </div>
             </div>
