adds font awesome icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
@@ -54,7 +54,7 @@
                 <div class="col-lg-10 align-self-end">
                     <h1 class="text-uppercase text-white font-weight-bold">
                         Services
-                        <h1 class="text-uppercase text-white font-weight-bold display-block"></h1>
+                        </h1>
 
                         <hr class="divider my-4" />
                 </div>
@@ -87,28 +87,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-dumbbell text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-utensils text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Let's Do Brunch!</h3>
                         <p class="text-muted mb-0">Whether it's a Boho for the Bride or Bachelorette, a get together with the girls, or just an intimate gathering.We will put together a breathtaking brunch, with alluring decor and mouth watering offerings...So let the Prosecco and Mimosas grace your glasses, as you sit back and enjoy a most memorable experience.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-utensils text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-solid fa-cake-candles text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Unique themed parties for any occasion.</h3>
-                        <p class="text-muted mb-0">From a traditional style Backyard Barbeque Party, to a Hawaiian Luau , or Polynesian style tiki party ..We bring the island to you , so let's Limbo!! With stylish decor and theme, delicious food and upbeat music , we have something for everyone..How about an Italian feast or Mexican style  Fiesta in your own backyard? The possibilities are endless.</p>
+                        <p class="text-muted mb-0">From a traditional style Backyard Barbeque Party, to a Hawaiian Luau, or Polynesian style tiki party. We bring the island to you, so let's Limbo!! With stylish decor and theme, delicious food and upbeat music, we have something for everyone. How about an Italian feast or Mexican style Fiesta in your own backyard? The possibilities are endless.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-laptop text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-champagne-glasses text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Bring the vineyard right to your backyard</h3>
                         <p class="text-muted mb-0">Let our server fill your flutes, as you indulge in our custom charcuterie boards, or tasty tappas and pizzas...Why travel when you can do a wine tasting in the comfort of your own home? The options are endless.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+                        <i class="fas fa-4x fa-solid fa-video text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Backyard movie night and youth parties.</h3>
                         <p class="text-muted mb-0">Bringing the theater experience straight to your doorstep complete with fresh popcorn and drinks, our setup is sure to woo any crowd.</p>
                         <p class="text-muted mb-0">Youth and teen parties tailored to suit any occasion from graduations to sweet sixteens, and traditional birthdays..</p>
