adds personal images and fixes img position

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         </h1>
         <h2 class="sub-head h5 ">We Grill... You Chill</h2>
+
     </div>
 </header>
 
@@ -52,6 +53,8 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
+                    <img class="img-fluid" src="assets/img/hammer-foto.jpg" alt="" />
+                    <hr class="divider my-4" />
                     <h1 class="text-uppercase text-white font-weight-bold">
                         Services
                         </h1>
