--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
             <div class="row">
                 <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                     <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                    <div id="phone-number">+1 (908) 267-2056</div>
+                    <div id="phone-number">+1 (516) 808-6154</div>
                 </div>
                 <div class="col-lg-4 mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:vdelacuetara@gmail.com">vdelacuetara@gmail.com</a>
+                    <a class="d-block" href="mailto:vdelacuetara@gmail.com">NOT-AOL-EMAIL@NOTaol.com</a>
                 </div>
             </div>
         </div>
