--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/porfolio-modal.css" rel="stylesheet" />
 </head>
 <body id="page-top">
 <video src="assets/video/smallerVid.m4v" autoplay loop playsinline muted></video>
@@ -124,8 +125,8 @@
 <!--        <div class="container-fluid p-0">-->
 <!--            <div class="row no-gutters">-->
 <!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/challenge-yourself1800.jpg">-->
-<!--                        <img class="img-fluid" src="assets/img/challenge-yourself1800.jpg" alt="" />-->
+<!--                    <a class="portfolio-box" href="assets/img/challenge-yourself1800.jpeg">-->
+<!--                        <img class="img-fluid" src="assets/img/challenge-yourself1800.jpeg" alt="" />-->
 <!--                        <div class="portfolio-box-caption">-->
 <!--                            <div class="project-category text-white-50">Body and Mind</div>-->
 <!--                            <div class="project-name">Transformation</div>-->
@@ -133,8 +134,8 @@
 <!--                    </a>-->
 <!--                </div>-->
 <!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/woman-taking-online-class-arm2400.jpg">-->
-<!--                        <img class="img-fluid" src="assets/img/woman-taking-online-class-arm2400.jpg" alt="" />-->
+<!--                    <a class="portfolio-box" href="assets/img/woman-taking-online-class-arm2400.jpeg">-->
+<!--                        <img class="img-fluid" src="assets/img/woman-taking-online-class-arm2400.jpeg" alt="" />-->
 <!--                        <div class="portfolio-box-caption">-->
 <!--                            <div class="project-category text-white-50">Category</div>-->
 <!--                            <div class="project-name">Project Name</div>-->
@@ -142,8 +143,8 @@
 <!--                    </a>-->
 <!--                </div>-->
 <!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/meal-plan1800.jpg">-->
-<!--                        <img class="img-fluid" src="assets/img/meal-plan1800.jpg" alt="" />-->
+<!--                    <a class="portfolio-box" href="assets/img/meal-plan1800.jpeg">-->
+<!--                        <img class="img-fluid" src="assets/img/meal-plan1800.jpeg" alt="" />-->
 <!--                        <div class="portfolio-box-caption">-->
 <!--                            <div class="project-category text-white-50">Category</div>-->
 <!--                            <div class="project-name">Project Name</div>-->
@@ -151,8 +152,8 @@
 <!--                    </a>-->
 <!--                </div>-->
 <!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/personal-trainer-writing2400.jpg">-->
-<!--                        <img class="img-fluid" src="assets/img/personal-trainer-writing2400.jpg" alt="" />-->
+<!--                    <a class="portfolio-box" href="assets/img/personal-trainer-writing2400.jpeg">-->
+<!--                        <img class="img-fluid" src="assets/img/personal-trainer-writing2400.jpeg" alt="" />-->
 <!--                        <div class="portfolio-box-caption">-->
 <!--                            <div class="project-category text-white-50">Category</div>-->
 <!--                            <div class="project-name">Project Name</div>-->
@@ -160,8 +161,8 @@
 <!--                    </a>-->
 <!--                </div>-->
 <!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/dumbbell-at-park2400.jpg">-->
-<!--                        <img class="img-fluid" src="assets/img/dumbbell-at-park2400.jpg" alt="" />-->
+<!--                    <a class="portfolio-box" href="assets/img/dumbbell-at-park2400.jpeg">-->
+<!--                        <img class="img-fluid" src="assets/img/dumbbell-at-park2400.jpeg" alt="" />-->
 <!--                        <div class="portfolio-box-caption">-->
 <!--                            <div class="project-category text-white-50">Category</div>-->
 <!--                            <div class="project-name">Project Name</div>-->
@@ -169,8 +170,8 @@
 <!--                    </a>-->
 <!--                </div>-->
 <!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/change-your-life1800.jpg">-->
-<!--                        <img class="img-fluid" src="assets/img/change-your-life1800.jpg" alt="" />-->
+<!--                    <a class="portfolio-box" href="assets/img/change-your-life1800.jpeg">-->
+<!--                        <img class="img-fluid" src="assets/img/change-your-life1800.jpeg" alt="" />-->
 <!--                        <div class="portfolio-box-caption p-3">-->
 <!--                            <div class="project-category text-white-50">Category</div>-->
 <!--                            <div class="project-name">Project Name</div>-->
@@ -195,13 +196,13 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/1.jpeg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Threads</div>
-                            <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                            <div class="portfolio-caption-heading">American Style</div>
+                            <div class="portfolio-caption-subheading text-muted">Classic BBQ Party</div>
                         </div>
                     </div>
                 </div>
@@ -210,13 +211,13 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/2.jpeg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Explore</div>
-                            <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                            <div class="portfolio-caption-heading">Luau Party</div>
+                            <div class="portfolio-caption-subheading text-muted">Some Content</div>
                         </div>
                     </div>
                 </div>
@@ -225,13 +226,13 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/3.jpeg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Finish</div>
-                            <div class="portfolio-caption-subheading text-muted">Identity</div>
+                            <div class="portfolio-caption-heading">Mexican Fiesta</div>
+                            <div class="portfolio-caption-subheading text-muted">Some Content</div>
                         </div>
                     </div>
                 </div>
@@ -240,13 +241,13 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/boho-setup.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Lines</div>
-                            <div class="portfolio-caption-subheading text-muted">Branding</div>
+                            <div class="portfolio-caption-heading">Kids Party</div>
+                            <div class="portfolio-caption-subheading text-muted">Some Content</div>
                         </div>
                     </div>
                 </div>
@@ -255,13 +256,14 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+<!--                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>-->
+                                <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/5.jpeg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Southwest</div>
-                            <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                            <div class="portfolio-caption-heading">Italian Festa</div>
+                            <div class="portfolio-caption-subheading text-muted">Italian Content</div>
                         </div>
                     </div>
                 </div>
@@ -270,13 +272,13 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/6.jpeg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Window</div>
-                            <div class="portfolio-caption-subheading text-muted">Photography</div>
+                            <div class="portfolio-caption-heading">Brunch Party</div>
+                            <div class="portfolio-caption-subheading text-muted">Brunch Content</div>
                         </div>
                     </div>
                 </div>
@@ -344,7 +346,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpeg" alt="..." />
                                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 <ul class="list-inline">
                                     <li>
@@ -379,7 +381,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpeg" alt="..." />
                                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 <ul class="list-inline">
                                     <li>
@@ -414,7 +416,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpeg" alt="..." />
                                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 <ul class="list-inline">
                                     <li>
@@ -484,7 +486,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpeg" alt="..." />
                                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 <ul class="list-inline">
                                     <li>
@@ -519,7 +521,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Project Name</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpeg" alt="..." />
                                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 <ul class="list-inline">
                                     <li>
@@ -551,6 +553,7 @@
 
 </main>
 <!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 <!-- Third party plugin JS-->
