rearranges icon text

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+<!--                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>-->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                    <!--                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>-->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Package Themes</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
     </nav>
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container h-100">
+        <div class="container h-100" id="theme-list">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
                     <h1 class="text-uppercase text-white font-weight-bold">
@@ -63,7 +63,7 @@
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-75 font-weight-light mb-5">Themed Parties <span class="pipette">|</span> Backyard Barbecues <span class="pipette">|</span> Bridal & Bachelorette Parties <span class="pipette">|</span> Elegant Brunch Parties <span class="pipette">|</span> Intimate Gatherings <span class="pipette">|</span> Birthday Parties <span class="pipette">|</span> Graduation Parties <span class="pipette">|</span> Wine Tastings <span class="pipette">|</span> Backyard Movie Night <span class="pipette">|</span> Tables, Chairs and Tent Rentals</h1>
                     </p>
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">Find Out More</a>
                 </div>
             </div>
         </div>
@@ -91,21 +91,21 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-utensils text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Let's Do Brunch!</h3>
-                        <p class="text-muted mb-0">Whether it's a Boho for the Bride or Bachelorette, a get together with the girls, or just an intimate gathering.We will put together a breathtaking brunch, with alluring decor and mouth watering offerings...So let the Prosecco and Mimosas grace your glasses, as you sit back and enjoy a most memorable experience.</p>
+                        <p class="text-muted mb-0">Breathtaking brunches, with alluring decor and mouth watering offerings.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-solid fa-cake-candles text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Unique themed parties for any occasion.</h3>
-                        <p class="text-muted mb-0">From a traditional style Backyard Barbeque Party, to a Hawaiian Luau, or Polynesian style tiki party. We bring the island to you, so let's Limbo!! With stylish decor and theme, delicious food and upbeat music, we have something for everyone. How about an Italian feast or Mexican style Fiesta in your own backyard? The possibilities are endless.</p>
+                        <h3 class="h4 mb-2">Unique Themed Parties</h3>
+                        <p class="text-muted mb-0">Whether it's a  Backyard Barbeque, Hawaiian Luau, Polynesian tiki party, Mexican Fiesta or Italian Festa. We bring a new world to your backyard</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-champagne-glasses text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Bring the vineyard right to your backyard</h3>
-                        <p class="text-muted mb-0">Let our server fill your flutes, as you indulge in our custom charcuterie boards, or tasty tappas and pizzas...Why travel when you can do a wine tasting in the comfort of your own home? The options are endless.</p>
+                        <h3 class="h4 mb-2">Experience the vineyard without leaving home</h3>
+                        <p class="text-muted mb-0">Let our server fill your flutes, as you indulge in our custom charcuterie boards, or tasty tappas and pizzas. Why travel when you can do a wine tasting in the comfort of your own home? The options are endless.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -120,67 +120,7 @@
             </div>
         </div>
     </section>
-<!--    &lt;!&ndash; Portfolio&ndash;&gt;-->
-<!--    <div id="portfolio">-->
-<!--        <div class="container-fluid p-0">-->
-<!--            <div class="row no-gutters">-->
-<!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/challenge-yourself1800.jpeg">-->
-<!--                        <img class="img-fluid" src="assets/img/challenge-yourself1800.jpeg" alt="" />-->
-<!--                        <div class="portfolio-box-caption">-->
-<!--                            <div class="project-category text-white-50">Body and Mind</div>-->
-<!--                            <div class="project-name">Transformation</div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/woman-taking-online-class-arm2400.jpeg">-->
-<!--                        <img class="img-fluid" src="assets/img/woman-taking-online-class-arm2400.jpeg" alt="" />-->
-<!--                        <div class="portfolio-box-caption">-->
-<!--                            <div class="project-category text-white-50">Category</div>-->
-<!--                            <div class="project-name">Project Name</div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/meal-plan1800.jpeg">-->
-<!--                        <img class="img-fluid" src="assets/img/meal-plan1800.jpeg" alt="" />-->
-<!--                        <div class="portfolio-box-caption">-->
-<!--                            <div class="project-category text-white-50">Category</div>-->
-<!--                            <div class="project-name">Project Name</div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/personal-trainer-writing2400.jpeg">-->
-<!--                        <img class="img-fluid" src="assets/img/personal-trainer-writing2400.jpeg" alt="" />-->
-<!--                        <div class="portfolio-box-caption">-->
-<!--                            <div class="project-category text-white-50">Category</div>-->
-<!--                            <div class="project-name">Project Name</div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/dumbbell-at-park2400.jpeg">-->
-<!--                        <img class="img-fluid" src="assets/img/dumbbell-at-park2400.jpeg" alt="" />-->
-<!--                        <div class="portfolio-box-caption">-->
-<!--                            <div class="project-category text-white-50">Category</div>-->
-<!--                            <div class="project-name">Project Name</div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <div class="col-lg-4 col-sm-6">-->
-<!--                    <a class="portfolio-box" href="assets/img/change-your-life1800.jpeg">-->
-<!--                        <img class="img-fluid" src="assets/img/change-your-life1800.jpeg" alt="" />-->
-<!--                        <div class="portfolio-box-caption p-3">-->
-<!--                            <div class="project-category text-white-50">Category</div>-->
-<!--                            <div class="project-name">Project Name</div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+
 
 <!--    TEST OUT PORTFOLIO-->
     <!-- Portfolio Grid-->
@@ -201,8 +141,8 @@
                             <img class="img-fluid" src="assets/img/portfolio/1.jpeg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">American Style</div>
-                            <div class="portfolio-caption-subheading text-muted">Classic BBQ Party</div>
+                            <div class="portfolio-caption-heading">Red White and Blue Party</div>
+                            <div class="portfolio-caption-subheading text-muted">Classic BBQ</div>
                         </div>
                     </div>
                 </div>
@@ -246,7 +186,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/boho-setup.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Kids Party</div>
+                            <div class="portfolio-caption-heading">Kid's Party</div>
                             <div class="portfolio-caption-subheading text-muted">Some Content</div>
                         </div>
                     </div>
@@ -278,7 +218,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Brunch Party</div>
-                            <div class="portfolio-caption-subheading text-muted">Brunch Content</div>
+                            <div class="portfolio-caption-subheading text-muted">Tailored to every occasion</div>
                         </div>
                     </div>
                 </div>
@@ -519,18 +459,19 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2 class="text-uppercase">Let's do Brunch!</h2>
+                                <p class="item-intro text-muted">Creating a unique brunch experience tailored to your occasion
+                                    There's something for everyone.</p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpeg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Whether you are having a get together with the girls, a bash for the Bachelorette, or an intimate gathering. We will put together an eye catching brunch with mouth watering offerings. Sit back and relax, as the constant flow of Prosecco and Bellini grace your gathering while you relax and enjoy.</p>
                                 <ul class="list-inline">
-                                    <li>
-                                        <strong>Client:</strong>
-                                        Window
+                                    <li class="text-md-center">
+                                        <strong>Base Cost:</strong>
+                                        $29/pp<span class="text-sm-left">*</span>
                                     </li>
-                                    <li>
-                                        <strong>Category:</strong>
-                                        Photography
+                                    <li class="text-sm-center">
+                                        <strong>*</strong>
+                                        <span>price pp varies per customization</span>
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -544,12 +485,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
 </main>
 <!-- Bootstrap core JS-->
