--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-champagne-glasses text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Experience the vineyard without leaving home</h3>
-                        <p class="text-muted mb-0">Let our server fill your flutes, as you indulge in our custom charcuterie boards, or tasty tappas and pizzas. Why travel when you can do a wine tasting in the comfort of your own home? The options are endless.</p>
+                        <p class="text-muted mb-0">Let our server fill your flutes, as you indulge in our custom charcuterie boards, or tasty tappas and pizzas. </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -113,7 +113,7 @@
                         <i class="fas fa-4x fa-solid fa-video text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Backyard movie night and youth parties.</h3>
                         <p class="text-muted mb-0">Bringing the theater experience straight to your doorstep complete with fresh popcorn and drinks, our setup is sure to woo any crowd.</p>
-                        <p class="text-muted mb-0">Youth and teen parties tailored to suit any occasion from graduations to sweet sixteens, and traditional birthdays..</p>
+<!--                        <p class="text-muted mb-0">Youth and teen parties tailored to suit any occasion from graduations to sweet sixteens, and traditional birthdays..</p>-->
 
                     </div>
                 </div>
@@ -138,10 +138,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/1.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/american-bbq.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Red White and Blue Party</div>
+                            <div class="portfolio-caption-heading">Red White & Blue Party</div>
                             <div class="portfolio-caption-subheading text-muted">Classic BBQ</div>
                         </div>
                     </div>
@@ -153,11 +153,11 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/2.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/hawaiian-bbq.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Luau Party</div>
-                            <div class="portfolio-caption-subheading text-muted">Some Content</div>
+                            <div class="portfolio-caption-subheading text-muted">Hawaiian BBQ</div>
                         </div>
                     </div>
                 </div>
@@ -168,11 +168,11 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/3.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/mexican-bbq.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Mexican Fiesta</div>
-                            <div class="portfolio-caption-subheading text-muted">Some Content</div>
+                            <div class="portfolio-caption-subheading text-muted">Mexican BBQ</div>
                         </div>
                     </div>
                 </div>
@@ -183,11 +183,11 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/boho-setup.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/kids-bbq.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Kid's Party</div>
-                            <div class="portfolio-caption-subheading text-muted">Some Content</div>
+                            <div class="portfolio-caption-subheading text-muted">Standard BBQ</div>
                         </div>
                     </div>
                 </div>
@@ -199,11 +199,11 @@
 <!--                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>-->
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/5.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/italian-bbq.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Italian Festa</div>
-                            <div class="portfolio-caption-subheading text-muted">Italian Content</div>
+                            <div class="portfolio-caption-subheading text-muted">Italian BBQ</div>
                         </div>
                     </div>
                 </div>
@@ -214,11 +214,11 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/6.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/boho3.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Brunch Party</div>
-                            <div class="portfolio-caption-subheading text-muted">Tailored to every occasion</div>
+                            <div class="portfolio-caption-heading">Boho Party</div>
+                            <div class="portfolio-caption-subheading text-muted">Brunch BBQ</div>
                         </div>
                     </div>
                 </div>
